# analytics-ai

./: .gitignore  README.md  main.py  messages.py  pyproject.toml  tools.py
analytics_agent/: agent_runtime.py  dataframe_main.py  incident_response_main.py  interactive_cli.py  main.py  messages.py  tool_loop.py  tools.py
analytics_agent/messages/: __init__.py  factories.py  openai.py  types.py
analytics_agent/providers/: __init__.py  base.py  openai_provider.py
analytics_agent/tools/: __init__.py  provider_factories.py  registry.py  tool_chains.py  tool_loop.py
analytics_agent/tools/dataframe/: __init__.py  catalog.py  dataframe_registry.py  dataframe_tools.py  dataframe_tools_models.py
analytics_agent/tools/incident_response/: __init__.py  incident_response_registry.py  incident_response_tools.py  models.py  registry.py
providers/: base.py  openai_provider.py
tests/: test_agent_runtime.py  test_interactive_cli.py  test_messages.py  test_tool_loop.py  test_tools.py
