[project]
name = "analytics-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openai>=2.45.0",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]

[build-system]
requires = ["uv_build>=0.11.28,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "analytics_agent"
module-root = ""

[project.scripts]
run_agent = "analytics_agent.main:main"

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
preview = true
select = [
    "E",
    "F",
    "I",
    "PTH",
    "N",
    "D",
    "C4",
    "ANN"
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
