[project]
name = "analytics-agent"
version = "0.1.0"
description = "Tool-calling agents for local CSV analysis and simulated incident response"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openai>=2.45.0",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "rich>=14.0.0",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]

[build-system]
requires = ["uv_build>=0.11.28,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "analytics_agent"
module-root = ""

[project.scripts]
run_dataframe_agent = "analytics_agent.dataframe_main:main"
run_incident_agent = "analytics_agent.incident_response_main:main"
run_interactive_agent = "analytics_agent.interactive_cli:main"

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
preview = true
select = [
    "E",
    "F",
    "I",
    "PTH",
    "N",
    "D",
    "C4",
    "ANN"
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
